--- a/dashboard.html
+++ b/dashboard.html
@@ -143,6 +143,7 @@ desired effect
 -->
 
 <body class="skin-blue layout-top-nav">
+  <h1>text</h1>
   <header class="main-header">
     <nav class="navbar navbar-fixed-top nav-trans">
       <div class="container">
