--- a/starter.html
+++ b/starter.html
@@ -55,6 +55,7 @@ desired effect
 -->
 <body class="hold-transition skin-purple sidebar-mini">
 <div class="wrapper">
+  <h1>Hello</h1>
   <!-- Main Header -->
   <header class="main-header">
 
