--- a/hima.html
+++ b/hima.html
@@ -214,10 +214,15 @@ desired effect
     <div class="row" style="background-color: white;">
       <div class="container">
         <div class="text-center">
-          <h1>KELUARGA MAHASISWA BUDDHA (KMB)</h1>
+          <h1>HIMPUNAN MAHASISWA (HIMA)</h1>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
-            Perkumpulan mahasiswa/i Buddha STTS 
+            Himpunan Mahasiswa merupakan organisasi yang terbentuk dari program studi. 
+            Organisasi ini secara struktural berada di bawah BEM. Kegiatan yang banyak dilakukan 
+            oleh organisasi ini adalah seminar dan kunjungan. Beberapa pabrik dan industri 
+            sudah pernah dikunjungi oleh HIMA, begitu sebutannya. Hima pun tidak 
+            terkungkung dalam lingkup kampus. Mereka juga menjalin kerja sama dengan 
+            pihak-pihak luar, terutama saat akan menyelenggarakan event-event besar. 
             <br><br>
         </div>
       </div>
@@ -226,95 +231,123 @@ desired effect
     <div class="row" style="background-color: black;">
         <div class="container">
           <div class="text-center">
-            <h1 style='color:white;'>RELIGION</h1>
+            <h1 style='color:white;'>MAJOR</h1>
           </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-4 col-sm-12 col-xs-12">
             <div class="card-media">
               <div class="card-media-object-container">
                 <div class="card-media-object" style="background-image: url('bg2.png')"></div>
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-mosque"></i>UKKI</span>
+                  <span class="subtle"><i class="fa fa-laptop"></i>HIMAFOR</span>
                 </div>
                 <span class="card-media-body-heading">
-                  UNIT KEGIATAN KEROHANIAN ISLAM
+                  HIMPUNAN MAHASISWA INFORMATIKA
                 </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Musholla iSTTS</span>
-                </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#moslem #ukki </span>
-                  <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
+                  <span class="card-media-body-supporting-bottom-text subtle">#informatika #coding </span>
+                  <a href="himafor.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-4 col-sm-12 col-xs-12">
             <div class="card-media">
               <div class="card-media-object-container">
                 <div class="card-media-object" style="background-image: url('bg1.png')"></div>
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-place-of-worship"></i> PD</span>
+                  <span class="subtle"><i class="fa fa-industry"></i>HIMATRIS</span>
                 </div>
                 <span class="card-media-body-heading">
-                  PERSEKUTUAN DOA
+                  HIMPUNAN MAHASISWA INDUSTRI
                 </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Auditorium STTS</span>
-                </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#pd #Christians #connectinggroup</span>
-                  <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
+                  <span class="card-media-body-supporting-bottom-text subtle">#industri</span>
+                  <a href="himatris.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-4 col-sm-12 col-xs-12">
             <div class="card-media">
               <div class="card-media-object-container">
                 <div class="card-media-object" style="background-image: url('bg3.png')"></div>
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-gopuram"></i>KMB</span>
+                  <span class="subtle"><i class="fa fa-paint-brush"></i>HIMADKV</span>
                 </div>
                 <span class="card-media-body-heading">
-                    KELUARGA MAHASISWA BUDDHA
+                    HIMPUNAN MAHASISWA DESAIN KOMUNIKASI VISUAL
                 </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">B-401</span>
-                </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#kmb #buddhist</span>
-                  <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
+                  <span class="card-media-body-supporting-bottom-text subtle">#dkv #desain</span>
+                  <a href="himadkv.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
+          <div class="col-md-4 col-sm-12 col-xs-12">
             <div class="card-media">
               <div class="card-media-object-container">
                 <div class="card-media-object" style="background-image: url('bg1.png')"></div>
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-church"></i>KMK</span>
+                  <span class="subtle"><i class="fa fa-pencil"></i>HIMADESPRO</span>
                 </div>
                 <span class="card-media-body-heading">
-                  KELUARGA MAHASISWA KATHOLIK
+                  HIMPUNAN MAHASISWA DESAIN PRODUK
                 </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">E-305</span>
-                </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#catholics #cell-group</span>
-                  <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
+                  <span class="card-media-body-supporting-bottom-text subtle">#produk</span>
+                  <a href="himadespro.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
+                    Details</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 col-xs-12">
+            <div class="card-media">
+              <div class="card-media-object-container">
+                <div class="card-media-object" style="background-image: url('bg1.png')"></div>
+              </div>
+              <div class="card-media-body">
+                <div class="card-media-body-top">
+                  <span class="subtle"><i class="fa fa-dollar"></i>HIMASIB</span>
+                </div>
+                <span class="card-media-body-heading">
+                  HIMPUNAN MAHASISWA SISTEM INFORMASI BISNIS
+                </span>
+                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
+                  <span class="card-media-body-supporting-bottom-text subtle">#sib #sisteminformasibisnis</span>
+                  <a href="himasib.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
+                    Details</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 col-xs-12">
+            <div class="card-media">
+              <div class="card-media-object-container">
+                <div class="card-media-object" style="background-image: url('bg1.png')"></div>
+              </div>
+              <div class="card-media-body">
+                <div class="card-media-body-top">
+                  <span class="subtle"><i class="fa fa-tv"></i>HIMAELEKTRO</span>
+                </div>
+                <span class="card-media-body-heading">
+                  HIMPUNAN MAHASISWA ELEKTRO
+                </span>
+                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
+                  <span class="card-media-body-supporting-bottom-text subtle">#elektro</span>
+                  <a href="himaelektro.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
               </div>
