--- a/himasib.html
+++ b/himasib.html
@@ -214,10 +214,10 @@ desired effect
     <div class="row" style="background-color: white;">
       <div class="container">
         <div class="text-center">
-          <h1>KELUARGA MAHASISWA BUDDHA (KMB)</h1>
+          <h1>HIMASIB</h1>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
-            Perkumpulan mahasiswa/i Buddha STTS 
+            Perkumpulan mahasiswa/i jurusan Sistem Informasi Bisnis STTS 
             <br><br>
         </div>
       </div>
