Edit Setelah Progress + tambah UKM

--- a/bem.html
+++ b/bem.html
@@ -71,7 +71,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     }
 
     .nav-trans {
-      background-color: transparent !important;
+      background-color: black !important;
       padding: 25px;
     }
 
@@ -169,7 +169,7 @@ desired effect
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Aktivitas Mahasiswa <i class="caret"></i></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="hima.html">Himpunan Mahasiswa (Hima)</a></li>
-                  <li><a href="#">Unit Kegiatan Mahasiswa (UKM)</a></li>
+                  <li><a href="ukm.html">Unit Kegiatan Mahasiswa (UKM)</a></li>
                   <li><a href="ukk.html">Unit Kegiatan Kerohanian (UKK)</a></li>
                   <li><a href="bem.html">Badan Eksekutif Mahasiswa (BEM)</a></li>
                 </ul>
@@ -192,27 +192,9 @@ desired effect
   </header>
 
   <div class="wrapper">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item">
-          <img src="bg1.png" alt="First slide">
-        </div>
-        <div class="item">
-          <img src="bg2.png" alt="Second slide">
-        </div>
-        <div class="item active">
-          <img src="bg3.png" alt="Third slide">
-        </div>
-      </div>
-    </div>
-
     <div class="row" style="background-color: white;">
       <div class="container">
+          <br><br><br><br>
         <div class="text-center">
           <h1>BADAN EKSEKUTIF MAHASISWA (BEM)</h1>
         </div>
