--- a/kmk.html
+++ b/kmk.html
@@ -71,7 +71,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     }
 
     .nav-trans {
-      background-color: transparent !important;
+      background-color: black !important;
       padding: 25px;
     }
 
@@ -169,7 +169,7 @@ desired effect
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Aktivitas Mahasiswa <i class="caret"></i></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="hima.html">Himpunan Mahasiswa (Hima)</a></li>
-                  <li><a href="#">Unit Kegiatan Mahasiswa (UKM)</a></li>
+                  <li><a href="ukm.html">Unit Kegiatan Mahasiswa (UKM)</a></li>
                   <li><a href="ukk.html">Unit Kegiatan Kerohanian (UKK)</a></li>
                   <li><a href="bem.html">Badan Eksekutif Mahasiswa (BEM)</a></li>
                 </ul>
@@ -192,27 +192,9 @@ desired effect
   </header>
 
   <div class="wrapper">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item">
-          <img src="bg1.png" alt="First slide">
-        </div>
-        <div class="item">
-          <img src="bg2.png" alt="Second slide">
-        </div>
-        <div class="item active">
-          <img src="bg3.png" alt="Third slide">
-        </div>
-      </div>
-    </div>
-
     <div class="row" style="background-color: white;">
       <div class="container">
+          <br><br><br><br>
         <div class="text-center">
           <h1>KELUARGA MAHASISWA KATHOLIK(KMK)</h1>
         </div>
@@ -226,7 +208,7 @@ desired effect
     <div class="row" style="background-color: black;">
         <div class="container">
           <div class="text-center">
-            <h1 style='color:white;'>RELIGION</h1>
+            <h1 style='color:white;'>EVENT HANDLED</h1>
           </div>
           <div class="col-md-6 col-sm-12 col-xs-12">
             <div class="card-media">
@@ -235,16 +217,16 @@ desired effect
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-mosque"></i>UKKI</span>
+                  <span class="subtle"><i class="fa fa-church"></i>WELCOME PARTY KMK</span>
                 </div>
                 <span class="card-media-body-heading">
-                  UNIT KEGIATAN KEROHANIAN ISLAM
+                  BBQ NIGHT KMK
                 </span>
                 <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Musholla iSTTS</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">Rooftop iSTTS</span>
                 </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#moslem #ukki </span>
+                  <span class="card-media-body-supporting-bottom-text subtle">#bbqnight</span>
                   <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
@@ -258,62 +240,16 @@ desired effect
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-place-of-worship"></i> PD</span>
+                  <span class="subtle"><i class="fa fa-church"></i>RETRET KMK</span>
                 </div>
                 <span class="card-media-body-heading">
-                  PERSEKUTUAN DOA
+                  RETRET KMK 2019
                 </span>
                 <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Auditorium STTS</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">Biara Pasionis Malang</span>
                 </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#pd #Christians #connectinggroup</span>
-                  <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
-                    Details</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="card-media">
-              <div class="card-media-object-container">
-                <div class="card-media-object" style="background-image: url('bg3.png')"></div>
-              </div>
-              <div class="card-media-body">
-                <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-gopuram"></i>KMB</span>
-                </div>
-                <span class="card-media-body-heading">
-                    KELUARGA MAHASISWA BUDDHA
-                </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">B-401</span>
-                </div>
-                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#kmb #buddhist</span>
-                  <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
-                    Details</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="card-media">
-              <div class="card-media-object-container">
-                <div class="card-media-object" style="background-image: url('bg1.png')"></div>
-              </div>
-              <div class="card-media-body">
-                <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-church"></i>KMK</span>
-                </div>
-                <span class="card-media-body-heading">
-                  KELUARGA MAHASISWA KATHOLIK
-                </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">E-305</span>
-                </div>
-                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#catholics #cell-group</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">#retret</span>
                   <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
