--- a/ukm.html
+++ b/ukm.html
@@ -196,116 +196,109 @@ desired effect
       <div class="container">
           <br><br><br><br>
         <div class="text-center">
-          <h1>UNIT KEGIATAN KEROHANIAN (UKK)</h1>
+          <h1>UNIT KEGIATAN MAHASISWA (UKM)</h1>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
-            UKK adalah organisasi bentukan mahasiswa lainnya lagi yang berhubungan dengan 
-            agama yang dianut mahasiswa. Organisasi ini sepenuhnya didukung oleh kampus, 
-            mengingat iSTTS merupakan salah satu kampus swasta yang menghargai kebebasan beragama. 
+                UKM adalah organisasi bentukan mahasiswa yang berhubungan dengan hobi mahasiswa. 
+                Dengan demikian, setiap mahasiswa yang memiliki hobi yang sama dapat bergabung dalam 
+                UKM-UKM yang sesuai. Sebagian besar kegiatan seni maupun pertunjukkan di lingkungan kampus 
+                diisi oleh UKM-UKM ini.
             <br><br>
         </div>
       </div>
     </div>
 
-    <div class="row" style="background-color: black;">
+    <div class="row h8" style="background-color: white">
         <div class="container">
-          <div class="text-center">
-            <h1 style='color:white;'>RELIGION</h1>
-          </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="card-media">
-              <div class="card-media-object-container">
-                <div class="card-media-object" style="background-image: url('bg2.png')"></div>
-              </div>
-              <div class="card-media-body">
-                <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-mosque"></i>UKKI</span>
-                </div>
-                <span class="card-media-body-heading">
-                  UNIT KEGIATAN KEROHANIAN ISLAM
-                </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Musholla iSTTS</span>
-                </div>
-                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#moslem #ukki </span>
-                  <a href="ukki.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
-                    Details</a>
-                </div>
-              </div>
+            <div class="text-center">
+                <h1>UKM</h1>
             </div>
-          </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="card-media">
-              <div class="card-media-object-container">
-                <div class="card-media-object" style="background-image: url('bg1.png')"></div>
-              </div>
-              <div class="card-media-body">
-                <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-place-of-worship"></i> PD</span>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Kyokunsinkai</h3>
+                    </div>
                 </div>
-                <span class="card-media-body-heading">
-                  PERSEKUTUAN DOA
-                </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Auditorium STTS</span>
-                </div>
-                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#pd #Christians #connectinggroup</span>
-                  <a href="pd.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
-                    Details</a>
-                </div>
-              </div>
             </div>
-          </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="card-media">
-              <div class="card-media-object-container">
-                <div class="card-media-object" style="background-image: url('bg3.png')"></div>
-              </div>
-              <div class="card-media-body">
-                <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-gopuram"></i>KMB</span>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Basket</h3>
+                    </div>
                 </div>
-                <span class="card-media-body-heading">
-                    KELUARGA MAHASISWA BUDDHA
-                </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">B-401</span>
-                </div>
-                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#kmb #buddhist</span>
-                  <a href="kmb.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
-                    Details</a>
-                </div>
-              </div>
             </div>
-          </div>
-          <div class="col-md-6 col-sm-12 col-xs-12">
-            <div class="card-media">
-              <div class="card-media-object-container">
-                <div class="card-media-object" style="background-image: url('bg1.png')"></div>
-              </div>
-              <div class="card-media-body">
-                <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-church"></i>KMK</span>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Band</h3>
+                    </div>
                 </div>
-                <span class="card-media-body-heading">
-                  KELUARGA MAHASISWA KATHOLIK
-                </span>
-                <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">E-305</span>
-                </div>
-                <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#catholics #cell-group</span>
-                  <a href="kmk.html" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
-                    Details</a>
-                </div>
-              </div>
             </div>
-          </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Dance</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Mapala</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Taekwondo</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Badminton</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Futsal</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Catur</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Teater</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Pingpong</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="testimonial">
+                    <div class="testimonial-footer">
+                        <h3>Board Game</h3>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
 
     <div class="row bg-light-blue" style="padding: 10px;">
       <div class="container">
