--- a/himadespro.html
+++ b/himadespro.html
@@ -71,7 +71,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     }
 
     .nav-trans {
-      background-color: transparent !important;
+      background-color: black !important;
       padding: 25px;
     }
 
@@ -169,7 +169,7 @@ desired effect
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Aktivitas Mahasiswa <i class="caret"></i></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="hima.html">Himpunan Mahasiswa (Hima)</a></li>
-                  <li><a href="#">Unit Kegiatan Mahasiswa (UKM)</a></li>
+                  <li><a href="ukm.html">Unit Kegiatan Mahasiswa (UKM)</a></li>
                   <li><a href="ukk.html">Unit Kegiatan Kerohanian (UKK)</a></li>
                   <li><a href="bem.html">Badan Eksekutif Mahasiswa (BEM)</a></li>
                 </ul>
@@ -192,29 +192,12 @@ desired effect
   </header>
 
   <div class="wrapper">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item">
-          <img src="bg1.png" alt="First slide">
-        </div>
-        <div class="item">
-          <img src="bg2.png" alt="Second slide">
-        </div>
-        <div class="item active">
-          <img src="bg3.png" alt="Third slide">
-        </div>
-      </div>
-    </div>
 
     <div class="row" style="background-color: white;">
       <div class="container">
+        <br><br><br><br>
         <div class="text-center">
-          <h1>HIMAFOR</h1>
+          <h1>HIMA DESPRO</h1>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
             Perkumpulan mahasiswa/i jurusan Desain Produk STTS 
@@ -226,7 +209,7 @@ desired effect
     <div class="row" style="background-color: black;">
         <div class="container">
           <div class="text-center">
-            <h1 style='color:white;'>RELIGION</h1>
+            <h1 style='color:white;'>EVENT HANDLED</h1>
           </div>
           <div class="col-md-6 col-sm-12 col-xs-12">
             <div class="card-media">
@@ -235,16 +218,16 @@ desired effect
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-mosque"></i>UKKI</span>
+                  <span class="subtle"><i class="fa fa-paint-brush"></i>CARDITION 2019</span>
                 </div>
                 <span class="card-media-body-heading">
-                  UNIT KEGIATAN KEROHANIAN ISLAM
+                  SCIENCE X DESIGN COMPETITION
                 </span>
                 <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Musholla iSTTS</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">Auditorium iSTTS</span>
                 </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#moslem #ukki </span>
+                  <span class="card-media-body-supporting-bottom-text subtle">#science #design</span>
                   <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
@@ -258,16 +241,16 @@ desired effect
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-place-of-worship"></i> PD</span>
+                  <span class="subtle"><i class="fa fa-paint-brush"></i>PACKAGING DESIGN COMPETITION</span>
                 </div>
                 <span class="card-media-body-heading">
-                  PERSEKUTUAN DOA
+                  DESAIN PACKAGING GORENGAN
                 </span>
                 <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">Auditorium STTS</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">Online</span>
                 </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#pd #Christians #connectinggroup</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">#packaging #design</span>
                   <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
@@ -281,16 +264,16 @@ desired effect
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-gopuram"></i>KMB</span>
+                  <span class="subtle"><i class="fa fa-paint-brush"></i>KSP</span>
                 </div>
                 <span class="card-media-body-heading">
-                    KELUARGA MAHASISWA BUDDHA
+                    ANCIENT CIVILIZATION, BUILDING, ENGINEERING AND TECHNOLOGY
                 </span>
                 <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">B-401</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">E-402</span>
                 </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#kmb #buddhist</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">#ancient</span>
                   <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
@@ -304,16 +287,16 @@ desired effect
               </div>
               <div class="card-media-body">
                 <div class="card-media-body-top">
-                  <span class="subtle"><i class="fa fa-church"></i>KMK</span>
+                  <span class="subtle"><i class="fa fa-church"></i>SANDALS WORKSHOP</span>
                 </div>
                 <span class="card-media-body-heading">
-                  KELUARGA MAHASISWA KATHOLIK
+                  SANDALS WORKSHOP BY CORTICA
                 </span>
                 <div class="card-media-body-supporting-bottom">
-                  <span class="card-media-body-supporting-bottom-text subtle">E-305</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">Ciputra World Surabaya</span>
                 </div>
                 <div class="card-media-body-supporting-bottom card-media-body-supporting-bottom-reveal">
-                  <span class="card-media-body-supporting-bottom-text subtle">#catholics #cell-group</span>
+                  <span class="card-media-body-supporting-bottom-text subtle">#sandals #workshop</span>
                   <a href="#/" class="card-media-body-supporting-bottom-text card-media-link u-float-right">View
                     Details</a>
                 </div>
